--- a/categories.html
+++ b/categories.html
@@ -37,12 +37,6 @@
 <!-- Style -->
 <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-<!-- marketing -->
-<link rel="stylesheet" type="text/css" href="demo-categories/marketing/css/marketing.css" />
-
-<!-- cafe -->
-<link rel="stylesheet" type="text/css" href="demo-categories/conference/css/conference.css" />
-
 <!-- LCD Style -->
 <link rel="stylesheet" type="text/css" href="css/lcd.css" />
 
@@ -88,8 +82,15 @@
                 <ul class="menu-links">
                   <li><a href="index.html">Inicio </a>
                   </li>
-                  <li><a href="services.html"> Servicios <i class="fa fa-angle-down fa-indicator"></i></a>
-                       <!-- drop down multilevel  -->
+                  <li><a href="blog.html" disabled> Blog </a>
+                  </li>
+                  <li><a href="foro.html">Foro </a>
+                  </li>
+                  <li><a href="news.html">Noticias </a>
+                  </li>
+                  <li><a href="about.html">Contacto </a>
+                  </li>
+                  <!-- <li><a href="services.html"> Servicios <i class="fa fa-angle-down fa-indicator"></i></a>
                     <ul class="drop-down-multilevel">
                       <li><a href="service-web.html"><i class="fa fa-code"></i> Desarrollo & Diseño Web </a></li>
                       <li><a href="service-design.html"><i class="fa fa-paint-brush"></i>Diseño Gráfico </a></li>
@@ -100,14 +101,7 @@
                       <li><a href="service-management.html"><i class="fa fa-list-ol"></i> Gestion de proyectos  </a></li>
                       <li class="divider"></li>
                     </ul>
-                  </li>
-                  <li><a href="about.html">Nosotros </a>
-                  </li>
-                  <li><a href="news.html">Noticias </a>
-                  </li>
-                  <li><a class="btn disabled" href="javascript:void(0)" disabled> Tips & Consejos </a>
-                  </li>
-                  
+                  </li> -->
                 </ul>
                 <div class="search-cart">
                   <div class="search">
@@ -136,95 +130,78 @@
 <!--=================================
  rev-slider -->
 
-<section class="slider-parallax business-banner-02 bg-dark">
-  <div class="slider-content-middle">
-   <div class="container">
-     <div class="row">
-        <div class="col-lg-12 col-md-12">
-         <div class="slider-content text-center">
-             <i class="fa fa-cog fa-spin fa-3x fa-fw margin-bottom"></i>
-            <h1 class="theme-color mt-20">Sección en desarrollo</h1>
-            <h4 class="text-gray">Estamos trabajando para poder habilitar esta sección lo más pronto posible.</h4>
-          </div>
-         </div>
+<section class="page-title bg-overlay-black-60 parallax pb-10" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/14.png);">
+  <div class="container">
+    <div class="row">
+     <div class="col-lg-12">
+      <ul class="page-breadcrumb pb-10">
+          <li><a href="#"><i class="fa fa-home"></i> Inicio</a> <i class="fa fa-angle-double-right"></i></li>
+          <li><a href="#">blog</a> <i class="fa fa-angle-double-right"></i></li>
+          <li><a href="#">Categorias</a></li>
+        </ul>
+        <div class="page-title-name">
+          <h3 class="text-white">Todas las categorías</h3>
         </div>
+
      </div>
   </div>
+ </div>
 </section>
 
-<!--=================================
- banner -->
-
-<section class="clearfix">
-  <!-- <div class="page-section-ptb parallax pb-150" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/07.jpg);">
-    <div class="container">
-      <div class="row">
-       <div class="col-lg-7">
-        <div class="section-title">
-          <h2>This is perhaps the single biggest obstacle that all <i class="theme-color"> of us must</i></h2>
+<section class="gray-bg blog masonry-main page-section-ptb">
+ <div class="container">
+   <div class="row">
+      <div class="col-lg-6 col-sm-6 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-layers-alt theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-back">Comunicación</h5>
+            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
+          </div>
         </div>
-        <p>One of the main areas that I work on with my clients is shedding these non-supportive beliefs and replacing them with beliefs that will help them to accomplish their desires. So why do we do it? <span class="theme-color"> For the most </span> part, we don’t do it intentionally or with malice.</p>
-        <p>It is truly amazing the damage that we, as parents, can inflict on our children. </p>
-        <a class="button nt-20" href="#">Explore More</a>
       </div>
-     </div>
-     </div>
-    </div> -->
-    <div class="page-section-pb bg-gray">
-      <div class="container">
-       <div class="business-feature-top">
-        <div class="row">
-           <div class="col-md-4 col-sm-4 border-right">
-             <div class="feature-text p-4">
-             <div class="feature-icon">
-              <span class="ti-desktop theme-color"></span>
-              </div>
-              <div class="feature-info">
-                  <h5>Seleccionada</h5>
-                   <p>It's always nice to browse some nice and   <span class="theme-color" data-toggle="tooltip" data-placement="top" title="" data-original-title="Won 10+ Awards">clean websites.</span> It is a good way to get inspiration.</p>
-               </div>
-           </div>
+      <div class="col-lg-6 col-sm-6 mb-30 ">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+           <span class="ti-headphone theme-color"></span>
           </div>
-          <div class="col-md-4 col-sm-4 border-right">
-             <div class="feature-text p-4">
-             <div class="feature-icon">
-              <span class="ti-headphone theme-color"></span>
-              </div>
-              <div class="feature-info">
-                <h5>Organizada</h5>
-                 <p>Our Support Team will do its best to provide the best helpful answer for the issues.</p>
-               </div>
-           </div>
-          </div>
-           <div class="col-md-4 col-sm-4">
-             <div class="feature-text p-4">
-             <div class="feature-icon">
-              <span class="ti-shield theme-color"></span>
-              </div>
-              <div class="feature-info">
-                  <h5>Interconectada</h5>
-                   <p>High performance, super fast with top page speed &amp; yslow ratings </p>
-              </div>
-           </div>
-          </div>
-         </div>
-       </div>
-        <div class="row justify-content-center mt-50">
-          <div class="col-lg-8">
-            <div class="text-center">
-                <h5 class="text-gray l-height-32">Mejora tu vida con tecnología</h5>
-                <h3 class="text-gray l-height-32">Noticias, opiniones y consejos sobre <i class="theme-color">los medios digitales y su uso</i></h3>
-              </div>
+          <div class="media-body">
+            <h5 class="text-back">Trabajo a distancia</h5>
+            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
           </div>
         </div>
-     </div>
+      </div>
+      <div class="col-lg-6 col-sm-6 xs-mb-30">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+            <span class="ti-desktop theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-back">Herramientas digitales</h5>
+            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-6 col-sm-6">
+        <div class="media border p-4">
+          <div class="feature-icon media-icon mr-4">
+            <span class="ti-settings theme-color"></span>
+          </div>
+          <div class="media-body">
+            <h5 class="text-back">Tips & consejos</h5>
+            <p class="mb-0">Dolor sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt sit consectetur conseqt quibusdam, enim expedita sed quia nesciunt</p>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </section>
 
 
 <!--=================================
  footer -->
-
 <footer class="footer page-section-pt bg-dark">
  <div class="container">
   <div class="row">
@@ -289,13 +266,13 @@
   </div>
   </div>
 </footer>
-
 <!--=================================
  footer -->
 
 </div>
 
-<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up pt-10"></i></a></div>
+
+<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>ARRIBA</span></a></div>
 
 <!--=================================
  jquery -->
