--- a/blog.html
+++ b/blog.html
@@ -130,8 +130,15 @@
 <!--=================================
  rev-slider -->
 
-<section class="page-title bg-overlay-black-60 parallax">
-
+<section class="">
+  <div class="">
+   <div class="jumbotron jumbotron-fluid bg-dark mb-0">
+      <div class="container">
+        <h3 class="text-white display-5 mt-50">No es solo un blog, <br> es la posta de la <span class="theme-color">tecnología</span>.</h3>
+        <p class="text-white lead">Encuentra información útil sobre los medios digitales y su uso.</p>
+      </div>
+  </div>
+  </div>
 </section>
 
 <section class="gray-bg blog masonry-main page-section-pb">
