--- a/index2.html
+++ b/index2.html
@@ -103,16 +103,30 @@
                 <!-- menu links -->
                 <div class="menu-bar">
                   <ul class="menu-links">
-                    <li><a href="index.html">Inicio </a>
+                    <li><a href="news.html">Noticias </a>
                     </li>
                     <li><a href="blog.html" disabled> Blog </a>
                     </li>
                     <li><a href="foro.html">Foro </a>
                     </li>
-                    <li><a href="news.html">Noticias </a>
+                    <!-- <li><a href="faqs.html">Preguntas </a>
                     </li>
-                    <li><a class="text-warning" href="login.html">Iniciar sesion </a>
+                    <li><a href="faqs.html">Nosotros </a>
+                    </li> -->
+                    <li><a href="login.html" type="button" class="btn btn-warning btn-sm text-dark">Ingresar</a>
                     </li>
+
+                    <div class="search-cart">
+                      <div class="search">
+                        <a class="search-btn not_click" href="javascript:void(0);"></a>
+                          <div class="search-box not-click">
+                             <form action="search.html" method="get">
+                              <input type="text" class="not-click form-control" name="search" placeholder="Buscar.." value="">
+                              <button class="search-button" type="submit"> <i class="fa fa-search not-click"></i></button>
+                            </form>
+                       </div>
+                      </div>
+                    </div>
                     <!-- <li><a href="services.html"> Servicios <i class="fa fa-angle-down fa-indicator"></i></a>
                       <ul class="drop-down-multilevel">
                         <li><a href="service-web.html"><i class="fa fa-code"></i> Desarrollo & Diseño Web </a></li>
