--- a/news.html
+++ b/news.html
@@ -136,19 +136,14 @@
 <!--=================================
  rev-slider -->
 
-<section class="slider-parallax business-banner-02 bg-dark">
-  <div class="slider-content-middle">
-   <div class="container">
-     <div class="row">
-        <div class="col-lg-12 col-md-12">
-         <div class="slider-content text-center">
-             <i class="fa fa-cog fa-spin fa-3x fa-fw margin-bottom"></i>
-            <h1 class="theme-color mt-20">Sección en desarrollo</h1>
-            <h4 class="text-gray">Estamos trabajando para poder habilitar esta sección lo más pronto posible.</h4>
-          </div>
-         </div>
-        </div>
-     </div>
+<section class="">
+  <div class="">
+   <div class="jumbotron jumbotron-fluid bg-dark">
+  <div class="container">
+    <h3 class="text-white display-5 mt-50">No son sólo noticias, <br> es la posta de la <span class="theme-color">tecnología</span>.</h3>
+    <p class="text-white lead">Brindamos información útil sobre los medios digitales y su uso.</p>
+  </div>
+</div>
   </div>
 </section>
 
@@ -156,68 +151,26 @@
  banner -->
 
 <section class="clearfix">
-  <!-- <div class="page-section-ptb parallax pb-150" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/07.jpg);">
-    <div class="container">
-      <div class="row">
-       <div class="col-lg-7">
-        <div class="section-title">
-          <h2>This is perhaps the single biggest obstacle that all <i class="theme-color"> of us must</i></h2>
-        </div>
-        <p>One of the main areas that I work on with my clients is shedding these non-supportive beliefs and replacing them with beliefs that will help them to accomplish their desires. So why do we do it? <span class="theme-color"> For the most </span> part, we don’t do it intentionally or with malice.</p>
-        <p>It is truly amazing the damage that we, as parents, can inflict on our children. </p>
-        <a class="button nt-20" href="#">Explore More</a>
-      </div>
-     </div>
-     </div>
-    </div> -->
-    <div class="page-section-pb bg-gray">
+    <div class="page-section-pb">
       <div class="container">
-       <div class="business-feature-top">
-        <div class="row">
-           <div class="col-md-4 col-sm-4 border-right">
-             <div class="feature-text p-4">
-             <div class="feature-icon">
-              <span class="ti-desktop theme-color"></span>
+         <div class="business-feature-top">
+          <div class="">
+            <col class="col-lg-12">
+              <div class="text-center">
+                  <i class="fa fa-cog fa-spin fa-5x fa-fw margin-bottom"></i>
+                  <h3 class="theme-color mt-20">Sección en desarrollo</h3>
+                  <p>Estamos trabajando para habilitarla lo antes posible.</p>
               </div>
-              <div class="feature-info">
-                  <h5>Seleccionada</h5>
-                   <p>It's always nice to browse some nice and   <span class="theme-color" data-toggle="tooltip" data-placement="top" title="" data-original-title="Won 10+ Awards">clean websites.</span> It is a good way to get inspiration.</p>
-               </div>
+            </col>
            </div>
-          </div>
-          <div class="col-md-4 col-sm-4 border-right">
-             <div class="feature-text p-4">
-             <div class="feature-icon">
-              <span class="ti-headphone theme-color"></span>
-              </div>
-              <div class="feature-info">
-                <h5>Organizada</h5>
-                 <p>Our Support Team will do its best to provide the best helpful answer for the issues.</p>
-               </div>
-           </div>
-          </div>
-           <div class="col-md-4 col-sm-4">
-             <div class="feature-text p-4">
-             <div class="feature-icon">
-              <span class="ti-shield theme-color"></span>
-              </div>
-              <div class="feature-info">
-                  <h5>Interconectada</h5>
-                   <p>High performance, super fast with top page speed &amp; yslow ratings </p>
-              </div>
-           </div>
-          </div>
          </div>
-       </div>
-        <div class="row justify-content-center mt-50">
-          <div class="col-lg-8">
-            <div class="text-center">
-                <h5 class="text-gray l-height-32">Mejora tu vida con tecnología</h5>
-                <h3 class="text-gray l-height-32">Noticias, opiniones y consejos sobre <i class="theme-color">los medios digitales y su uso</i></h3>
-              </div>
+          <div class="col-lg-12 mt-50">
+            <div class="">
+              <h3 class="text-dark display-5 mt-50">No son sólo noticias, <br> es la posta de la <span class="theme-color">tecnología</span>.</h3>
+              <p class="lead">Brindamos información útil sobre los medios digitales y su uso.</p>
+            </div>
           </div>
-        </div>
-     </div>
+       </div>
     </div>
 </section>
 
