--- a/user.html
+++ b/user.html
@@ -148,25 +148,7 @@
   </header>
 
 <section class="page-title bg-overlay-black-60 parallax pb-10" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/14.png);">
-  <div class="container">
-    <div class="row">
-     <div class="col-lg-12">
-      <ul class="page-breadcrumb pb-10">
-          <li><a href="index.html"><i class="fa fa-home"></i> Inicio</a> <i class="fa fa-angle-double-right"></i></li>
-          <li><a disabled>Usuarios</a> <i class="fa fa-angle-double-right"></i></li>
-          <li><a disabled>@cokecolombres</a></li>
-        </ul>
-        <div class="page-title-name">
-          <h3 class="text-white">Coke Colombres</h3>
-        </div>
-        <ul class="page-breadcrumb">
-          <li><a href="user.html"><i class="fa fa-user"></i> Coke Colombres</a></li>
-          <li><a class="disabled">&nbsp; 2222 puntos &nbsp;</a></li>
-          <li><a class="disabled"><i class="fa fa-calendar"></i>Hace 7 días</a> </li>
-        </ul>
-     </div>
-  </div>
- </div>
+
 </section>
 
 <!--=================================
@@ -178,140 +160,98 @@
 <section class="our-team white-bg page-section-ptb">
   <div class="container">
     <div class="row">
-       <div class="col-lg-4 sm-mb-30">
-         <img class="img-fluid full-width" src="images/team/12.jpg" alt="">
-     </div>
-    <div class="col-lg-8">
-      <div class="team-details">
+    <div class="col-lg-12 col-md-12 text-left mb-30">
+      <h4 class="">Coke Colombres </h4>
+      <span class="badge badge-primary">Marketing</span>
+      <span class="badge badge-secondary">Diseño</span>
+      <span class="badge badge-success">Website</span>
+      <span class="badge badge-danger">Gestión</span>
+
       <div class="clearfix">
-        <div class="title float-left mb-20">
-          <h2 class="theme-color">Coke Colombres</h2>
-          <span class="badge badge-primary">Marketing</span>
-          <span class="badge badge-secondary">Diseño</span>
-          <span class="badge badge-success">Website</span>
-          <span class="badge badge-danger">Gestión</span>
-         </div>
-         <div class="social-icons social-border color-hover float-right mt-10">
-           <ul>
-              <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i> </a></li>
-              <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i> </a></li>
-              <li class="social-dribbble"><a href="#"><i class="fa fa-dribbble"></i> </a></li>
-              <li class="social-vimeo"><a href="#"><i class="fa fa-vimeo"></i> </a></li>
-              <li class="social-pinterest"><a href="#"><i class="fa fa-pinterest-p"></i> </a></li>
-              <li class="social-behance"><a href="#"><i class="fa fa-behance"></i> </a></li>
-              <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i> </a></li>
-           </ul>
-          </div>
-         </div>
-        <div class="clearfix">
-           <p>Consectetur adipisicing eli. Vero quod conseqt quibusdam enim expedita sed quia nesciunt incidunt accusamus necessitatibus modi adipisci officia libero accusantium esse hic obcaecati. This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. </p>
+       <div class="social-icons social-border color-hover float-left mt-10">
+         <ul>
+            <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i> </a></li>
+            <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i> </a></li>
+            <li class="social-dribbble"><a href="#"><i class="fa fa-dribbble"></i> </a></li>
+            <li class="social-vimeo"><a href="#"><i class="fa fa-vimeo"></i> </a></li>
+            <li class="social-pinterest"><a href="#"><i class="fa fa-pinterest-p"></i> </a></li>
+            <li class="social-behance"><a href="#"><i class="fa fa-behance"></i> </a></li>
+            <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i> </a></li>
+         </ul>
         </div>
-      </div>
-      <div class="tab round shadow">
+       </div>
+    </div>
+     <div class="col-lg-12 col-md-12">
+      <div class="tab tab-border nav-left">
         <ul class="nav nav-tabs" id="myTab" role="tablist">
             <li class="nav-item">
-              <a class="nav-link active show" id="home-08-tab" data-toggle="tab" href="#home-08" role="tab" aria-controls="home-08" aria-selected="true"> <i class="fa fa-home"></i> Home</a>
+              <a class="nav-link active show" id="home-06-tab" data-toggle="tab" href="#home-06" role="tab" aria-controls="home-06" aria-selected="true"> <i class="fa fa-home"></i> Inicio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="profile-08-tab" data-toggle="tab" href="#profile-08" role="tab" aria-controls="profile-08" aria-selected="false"><i class="fa fa-user"></i> Profile </a>
+              <a class="nav-link" id="profile-06-tab" data-toggle="tab" href="#profile-06" role="tab" aria-controls="profile-06" aria-selected="false"><i class="fa fa-user"></i> Perfil </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="portfolio-08-tab" data-toggle="tab" href="#portfolio-08" role="tab" aria-controls="portfolio-08" aria-selected="false"><i class="fa fa-picture-o"></i> Portfolio </a>
+              <a class="nav-link" id="portfolio-06-tab" data-toggle="tab" href="#portfolio-06" role="tab" aria-controls="portfolio-06" aria-selected="false"><i class="fa fa-picture-o"></i> Publicaciones </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" id="contact-08-tab" data-toggle="tab" href="#contact-08" role="tab" aria-controls="contact-08" aria-selected="false"><i class="fa fa-check-square-o"></i> Contact </a>
+              <a class="nav-link" id="contact-06-tab" data-toggle="tab" href="#contact-06" role="tab" aria-controls="contact-06" aria-selected="false"><i class="fa fa-check-square-o"></i> Contacto </a>
             </li>
           </ul>
-          <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade active show" id="home-08" role="tabpanel" aria-labelledby="home-08-tab">
+          <div class="tab-content" id="myTabContent" style="min-height: 40vh">
+            <div class="tab-pane fade active show" id="home-06" role="tabpanel" aria-labelledby="home-06-tab">
               <p>The best way is to develop and follow a plan. Start with your goals in mind and then work backwards to develop the plan. What steps are required to get you to the goals? Make the plan as detailed as possible. Try to visualize and then plan for, every possible setback. Commit the plan to paper and then keep it with you at all times. Review it regularly and ensure that every step takes you closer to your Vision and Goals. If the plan doesn’t support the vision then change it!</p>
             </div>
-            <div class="tab-pane fade" id="profile-08" role="tabpanel" aria-labelledby="profile-08-tab">
+            <div class="tab-pane fade" id="profile-06" role="tabpanel" aria-labelledby="profile-06-tab">
               <p>We all carry a lot of baggage, thanks to our upbringing. The majority of people carry with them, an entire series of self-limiting beliefs that will absolutely stop, and hold them back from, success. Things like “I’m not good enough”, “I’m not smart enough”, “I’m not lucky enough”, and the worst, “I’m not worthy” are but a few of the self-limiting beliefs I have encountered. We carry them with us like rocks in a knapsack, and then use them to sabotage our success. So, how twisted is that? </p>
             </div>
-            <div class="tab-pane fade" id="portfolio-08" role="tabpanel" aria-labelledby="portfolio-08-tab">
+            <div class="tab-pane fade" id="portfolio-06" role="tabpanel" aria-labelledby="portfolio-06-tab">
               <p>Benjamin Franklin, inventor, statesman, writer, publisher and economist relates in his autobiography that early in his life he decided to focus on arriving at moral perfection. He made a list of 13 virtues, assigning a page to each. Under each virtue he wrote a summary that gave it fuller meaning. Then he practiced each one for a certain length of time. To make these virtues a habit, Franklin can up with a method to grade himself on his daily actions.</p>
             </div>
-            <div class="tab-pane fade" id="contact-08" role="tabpanel" aria-labelledby="contact-08-tab">
-              <p>The other virtues practice in succession by Franklin were silence, order, resolution, frugality, industry, sincerity, Justice, moderation, cleanliness, tranquility, chastity and humility. For the summary order he followed a little scheme of employing his time each day. From five to seven each morning he spent in bodily personal attention, saying a short prayer, thinking over the day’s business and resolutions.</p>
+            <div class="tab-pane fade" id="contact-06" role="tabpanel" aria-labelledby="contact-06-tab">
+              <div class="container">
+                <div class="row">
+                  <div class="col-lg-12 col-md-12 text-left">
+                    <div class="section-title">
+                      <h3 class="title-effect">Do You Want To Contact Me?</h3>
+                      <p class="mb-30">It would be great to hear from you! If you got any questions, please do not hesitate to send me a message. I am looking forward to hearing from you!</p>
+                     </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-sm-12">
+                    <div id="formmessage">Success/Error Message Goes Here</div>
+                    <form id="contactform" role="form" method="post" action="php/contact-form.php">
+                      <div class="contact-form clearfix">
+                        <div class="section-field">
+                          <input id="name" type="text" placeholder="Name*" class="form-control"  name="name">
+                        </div>
+                        <div class="section-field">
+                          <input type="email" placeholder="Email*" class="form-control" name="email">
+                        </div>
+                        <div class="section-field">
+                          <input type="text" placeholder="Phone*" class="form-control" name="phone">
+                        </div>
+                        <div class="section-field textarea">
+                         <textarea class="input-message form-control" placeholder="Comment*"  rows="7" name="message"></textarea>
+                        </div>
+                        <!-- Google reCaptch-->
+                        <div class="g-recaptcha section-field clearfix" data-sitekey="[Add your site key]">   
+                        </div>
+                        <input type="hidden" name="action" value="sendEmail"/>
+                        <button id="submit" name="submit" type="submit" value="Send" class="button button-border-blue"><span> Send message </span> <i class="fa fa-paper-plane"></i></button>
+                      </div>
+                    </form>
+                    <div id="ajaxloader" style="display:none"><img class="mx-auto mt-30 mb-30 d-block" src="images/pre-loader/loader-02.svg" alt=""></div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
       </div>
-     </div>
-   </div>
+    </div>
+    </div>
+
   </div>
-</section>
-
-<!--=================================
- our-Team -->
-
-
-<!--=================================
- contact-->
-
-<section class="contact contact-4 white-bg page-section-ptb">
-  <div class="container">
-     <div class="row">
-      <div class="col-lg-12 col-md-12 text-left">
-        <div class="section-title">
-          <h3 class="title-effect">Do You Want To Contact Me?</h3>
-          <p class="mb-30">It would be great to hear from you! If you got any questions, please do not hesitate to send me a message. I am looking forward to hearing from you!</p>
-       </div>
-      </div>
-     </div>
-  <div class="row">
-  <div class="col-sm-12">
-<div id="formmessage">Success/Error Message Goes Here</div>
- <form id="contactform" role="form" method="post" action="php/contact-form.php">
-   <div class="contact-form clearfix">
-      <div class="section-field">
-        <input id="name" type="text" placeholder="Name*" class="form-control"  name="name">
-       </div>
-       <div class="section-field">
-          <input type="email" placeholder="Email*" class="form-control" name="email">
-        </div>
-       <div class="section-field">
-          <input type="text" placeholder="Phone*" class="form-control" name="phone">
-        </div>
-       <div class="section-field textarea">
-         <textarea class="input-message form-control" placeholder="Comment*"  rows="7" name="message"></textarea>
-        </div>
-        <!-- Google reCaptch-->
-         <div class="g-recaptcha section-field clearfix" data-sitekey="[Add your site key]"></div>
-        <input type="hidden" name="action" value="sendEmail"/>
-         <button id="submit" name="submit" type="submit" value="Send" class="button button-border-blue"><span> Send message </span> <i class="fa fa-paper-plane"></i></button>
-        </div>
-      </form>
-     <div id="ajaxloader" style="display:none"><img class="mx-auto mt-30 mb-30 d-block" src="images/pre-loader/loader-02.svg" alt=""></div>
-    </div>
-    </div>
-   </div>
-</section>
-
-<!--=================================
- contact-->
-
-
-<!--=================================
-action box- -->
-
-<section class="action-box theme-bg full-width">
-  <div class="container">
-    <div class="row">
-     <div class="col-lg-12 col-md-12">
-       <div class="action-box-text">
-        <h3><strong> Webster: </strong> The most powerful template ever on the market</h3>
-        <p>Create tailor-cut websites with the exclusive multi-purpose responsive template along with powerful features.</p>
-      </div>
-      <div class="action-box-button">
-        <a class="button button-border white" href="#">
-          <span>Purchase Now</span>
-          <i class="fa fa-download"></i>
-       </a>
-     </div>
-    </div>
-  </div>
- </div>
 </section>
 
 
