footer, terms, privacy,

--- a/login.html
+++ b/login.html
@@ -92,7 +92,7 @@
      <div class="row justify-content-center no-gutter">
       <div class="col-lg-2 col-md-4">
         <div class="login-box-left   bg-gray2">
-          <img class="logo-small" src="images/logo-05.png" alt="">
+          <img class="logo-small" src="images/logo-0.png" alt="">
              <ul class="nav">
                <li class="active"><a href="#"> <i class="ti-user"></i> Iniciar sesión</a></li>
                <li><a href="signup.html"> <i class="ti-pencil-alt"></i> Registro</a></li>
@@ -114,8 +114,8 @@
           <p class="text-dark">Somos tecnología y compañía.</p>
           <p class="text-dark">La plataforma digital de aprendizaje online efectivo.</p>
           <ul class="list-unstyled pos-bot pb-40">
-            <li class="list-inline-item"><a class="text-white" href="#"> Términos de uso</a> </li>
-            <li class="list-inline-item"><a class="text-white" href="#"> Privacidad</a></li>
+            <li class="list-inline-item"><a class="text-white" href="terms.html"> Términos de uso</a></li> 
+            <li class="list-inline-item"><a class="text-white" href="privacy-policy.html"> Privacidad</a></li>
           </ul>
          </div>
        </div>
