--- a/signup.html
+++ b/signup.html
@@ -114,8 +114,8 @@
           <p class="text-dark">Somos tecnología y compañía.</p>
           <p class="text-dark">La plataforma digital de aprendizaje online efectivo.</p>
           <ul class="list-unstyled pos-bot pb-40">
-            <li class="list-inline-item"><a class="text-white" href="#"> Términos de uso</a> </li>
-            <li class="list-inline-item"><a class="text-white" href="#"> Privacidad</a></li>
+            <li class="list-inline-item"><a class="text-white" href="terms.html"> Términos de uso</a> </li>
+            <li class="list-inline-item"><a class="text-white" href="privacy-policy.html"> Privacidad</a></li>
           </ul>
          </div>
        </div>
