--- a/category_01.html
+++ b/category_01.html
@@ -80,7 +80,7 @@
                 <!-- menu links -->
                 <div class="menu-bar">
                   <ul class="menu-links">
-                    <li><a href="index.html">Inicio </a>
+                    <li><a href="index2.html">Inicio </a>
                     </li>
                     <li><a href="blog.html" disabled> Blog </a>
                     </li>
@@ -88,7 +88,7 @@
                     </li>
                     <li><a href="news.html">Noticias </a>
                     </li>
-                    <li><a href="about.html">Contacto </a>
+                    <li><a class="text-warning" href="login.html">Iniciar sesion </a>
                     </li>
                     <!-- <li><a href="services.html"> Servicios <i class="fa fa-angle-down fa-indicator"></i></a>
                       <ul class="drop-down-multilevel">
@@ -103,17 +103,6 @@
                       </ul>
                     </li> -->
                   </ul>
-                  <div class="search-cart">
-                    <div class="search">
-                      <a class="search-btn not_click" href="javascript:void(0);"></a>
-                        <div class="search-box not-click">
-                           <form action="search.html" method="get">
-                            <input type="text"  class="not-click form-control" name="search" placeholder="Buscar..." value="" >
-                            <button class="search-button" type="submit"> <i class="fa fa-search not-click"></i></button>
-                          </form>
-                     </div>
-                    </div>
-                  </div>
                 </div>
               </div>
             </div>
@@ -127,7 +116,7 @@
 <!--=================================
  header -->
 
-<section class="page-title bg-overlay-black-60 parallax pb-10" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/011.jpg);">
+<section class="page-title bg-overlay-black-60 parallax pb-10" data-jarallax='{"speed": 0.6}' style="background-image: url(images/bg/programming2.jpg);">
     <div class="container">
       <div class="row">
         <ul class="page-breadcrumb pb-10">
@@ -136,7 +125,7 @@
           <li>Post</li>
         </ul>
         <div class="page-title-name">
-          <h3 class="text-white">Desarrollo Web</h3>
+          <h3 class="text-white"><i class="fa fa-code mr-2"></i>Desarrollo Web</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                     tempor incididunt ut labo...</p>
         </div>
@@ -354,9 +343,9 @@
                <h6 class="mt-40 mb-20">Algunas categorías</h6>
             </div>
             <div class="sidebar-widget mb-40">
-              <button type="button" class="btn btn-primary btn-block">Marketing</button>
-              <button type="button" class="btn btn-secondary btn-block">Diseño gráfico</button>
-              <button type="button" class="btn btn-warning btn-block">Programación</button>
+              <button type="button" class="btn btn-primary btn-block"><i class="fa fa-line-chart mr-2"></i>Marketing</button>
+              <button type="button" class="btn btn-secondary btn-block"><i class="fa fa-paint-brush mr-2"></i>Diseño gráfico</button>
+              <button type="button" class="btn btn-warning btn-block"><i class="fa fa-code mr-2"></i>Programación</button>
               <button type="button" class="btn btn-info btn-block">Lifestyle</button>
               <button type="button" class="btn btn-success btn-block">Weed</button>
             </div>
@@ -377,34 +366,68 @@
       <div class="footer-logo">
         <img id="logo-footer" class="mb-20" src="images/logo-06.png" alt="">
         <p class="pb-10"> Inspiramos el buen uso e implementación de tecnología que potencie nuestras capacidades</p>
-      </div>
-  </div>
-      <div class="col-lg-3 col-md-6 col-sm-6 sm-mb-30">
-      <div class="footer-useful-link footer-hedding">
-        <h6 class="text-white mb-30 mt-10 text-uppercase">Información</h6>
-        <ul>
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Nosotros</a></li>
-          <li><a href="contact.html">Contacto</a></li>
-          <li><a href="#">Oportunidades</a></li>
-        </ul>
-      </div>
-    </div>
-    <div class="col-lg-5 col-md-6 col-sm-6">
-    <h6 class="text-white mb-30 mt-10 text-uppercase">Contacto</h6>
-    <ul class="addresss-info">
-        <li><i class="fa fa-map-marker"></i> <p>9 de Julio 371, Tucumán, Argentina <br> CP: 4000</p> </li>
-        <li><i class="fa fa-phone"></i> <a href="tel:7042791249"> <span>+54 9 381 232 4554 (whatsapp)</span> </a> </li>
-        <li><i class="fa fa-envelope-o"></i>contacto@lacompaniadigital.com</li>
-      </ul>
-      <div class="social-icons color-hover">
+        <div class="social-icons color-hover">
          <ul>
           <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
           <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li class="social-dribbble"><a href="#"><i class="fa fa-dribbble"></i> </a></li>
+          <li class="social-dribbble"><a href="#"><i class="fa fa-instagram"></i> </a></li>
           <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i> </a></li>
          </ul>
        </div>
+      </div>
+  </div>
+    <div class="col-lg-4 offset-lg-1 col-md-6 col-sm-6 sm-mb-30">
+      <div class="footer-useful-link footer-hedding">
+        <h6 class="text-white mb-30 mt-10 text-uppercase">Categorías destacadas</h6>
+        <ul class="addresss-info">
+          <li><i class="fa fa-code"></i> <a href="">Desarrollo web</a></li>
+          <li><i class="fa fa-line-chart"></i> <a href="">Marketing</a></li>
+          <li><i class="fa fa-paint-brush"></i> <a href="">Diseño Gráfico</a></li>
+          <li><i class="fa fa-paint-brush"></i> <a href="">Diseño Gráfico</a></li>
+          <li><i class="fa fa-paint-brush"></i> <a href="">Diseño Gráfico</a></li>
+          <li><i class="fa fa-paint-brush"></i> <a href="">Diseño Gráfico</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="col-lg-3  col-sm-6 xs-mb-30">
+      <h6 class="text-white mb-30 mt-10 text-uppercase">tags populares</h6>
+       <div class="footer-tags">
+         <ul>
+          <li><a href="#">Bootstrap</a></li>
+          <li><a href="#">HTML5</a></li>
+          <li><a href="#">Wordpress</a></li>
+          <li><a href="#">CSS3</a></li>
+          <li><a href="#">Creative</a></li>
+          <li><a href="#">Multipurpose</a></li>
+          <li><a href="#">Bootstrap</a></li>
+          <li><a href="#">HTML5</a></li>
+          <li><a href="#">Wordpress</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row justify-content-center mt-3 col-12">
+    <div class="col-md-10">
+       <div class="footer-Newsletter text-center mt-30 mb-40">
+        <div id="mc_embed_signup_scroll">
+          <form action="php/mailchimp-action.php" method="POST" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">
+           <div id="msg"> </div>
+            <div id="mc_embed_signup_scroll_2">
+              <input id="mce-EMAIL" class="form-control" type="text" placeholder="Entérate de todas las novedades de nuestro blog" name="email1" value="">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                  <input type="text" name="b_b7ef45306f8b17781aa5ae58a_6b09f39a55" tabindex="-1" value="">
+              </div>
+              <div class="clear">
+                <button type="submit" name="submitbtn" id="mc-embedded-subscribe" class="button button-border mt-20 form-button"> Suscribir </button>
+              </div>
+            </form>
+          </div>
+        </div>
+     </div>
     </div>
    </div>
      <div class="footer-widget mt-20">
@@ -423,7 +446,7 @@
 </div>
 
 
-<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up"></i> <span>ARRIBA</span></a></div>
+<div id="back-to-top"><a class="top arrow" href="#top"><i class="fa fa-angle-up pt-10"></i></a></div>
 
 <!--=================================
  jquery -->
