--- a/index2.html
+++ b/index2.html
@@ -141,10 +141,10 @@
       <div class="row pt-40">
         <div class="col-md-6 sm-mt-30">
           <h3 class="text-white l-height-32">Noticias, opiniones y consejos sobre <i class="theme-color">los medios digitales y su uso</i></h3>
-          <b>Somos tu compañía, queremos ayudarte a mejorar tu vida con tecnología. </b>
+          <b class="text-white">Somos tu compañía, queremos ayudarte a mejorar tu vida con tecnología. </b>
           
           <div class="col-md-10">
-           <p class="mt-30">Having clarity of purpose and a clear picture of what you desire, is probably the single most important factor in achievement. Why is Clarity so important?</p>
+           <p class="mt-30 text-white">Having clarity of purpose and a clear picture of what you desire, is probably the single most important factor in achievement. Why is Clarity so important?</p>
             <a class="button btn-block" href="#"> Comenzar ahora </a>
             <a class="button small btn-block bg-dark" href="#"> Quiero saber más </a>
           </div>
@@ -176,7 +176,7 @@ page-title -->
         <a href="category_01.html">
           <div class="media border p-4 bg-white"> 
             <div class="feature-icon media-icon mr-4">
-             <span class="ti-layers-alt theme-color"></span>
+             <span class="fa fa-code theme-color"></span>
             </div>
             <div class="media-body">
               <h5 class="text-dark">Desarrollo Web</h5>
@@ -191,7 +191,7 @@ page-title -->
         <a href="category_01.html">
           <div class="media border p-4 bg-white">
             <div class="feature-icon media-icon mr-4">
-             <span class="ti-headphone theme-color"></span>
+             <span class="fa fa-line-chart theme-color"></span>
             </div>
             <div class="media-body">
               <h5 class="text-dark">Marketing</h5>
@@ -204,7 +204,7 @@ page-title -->
         <a href="category_01.html">
           <div class="media border p-4 bg-white">
             <div class="feature-icon media-icon mr-4">
-             <span class="ti-layers-alt theme-color"></span>
+             <span class="fa fa-paint-brush theme-color"></span>
             </div>
             <div class="media-body">
               <h5 class="text-dark">Diseño Gráfico</h5>
@@ -310,11 +310,23 @@ page-title -->
 <section class="page-section-pb bg-dark">
   <div class="container">
     <div class="row justify-content-center pt-30">
-      <h4 class="text-white pt-10 pb-20">Social <span class="theme-bg text-dark">media</span></h4>
+      <div class="col-12 text-center">
+        <h4 class="text-white pt-10 pb-20">Social <span class="theme-bg text-dark">media</span></h4>
+      </div>
+      <div class="col-12 d-flex">
+        <div class="col-4">
+          <a class="twitter-timeline" data-lang="es" data-height="400" data-theme="light" href="https://twitter.com/CompaniaDigital?ref_src=twsrc%5Etfw">Tweets by CompaniaDigital</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </div>
+        <div class="col-4">
+          <div class="fb-page" data-href="https://www.facebook.com/lacompaniadigital" data-tabs="timeline, events" data-width="" data-height="400" data-small-header="true" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/lacompaniadigital" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/lacompaniadigital">LA COMPAÑÍA DIGITAL</a></blockquote></div>
+        </div>
+        <div class="col-4">
+          <div class="powr-instagram-feed" id="fe289961_1597954814"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
+        </div>
+      </div>
     </div>
   </div>
 </section>
-
 
 <section class="page-section-pt">
    <div class="container">
@@ -333,65 +345,81 @@ page-title -->
    </div>
 </section>
 
-<footer class="footer page-section-pt bg-dark">
+<footer class="footer page-section-pt black-bg">
  <div class="container">
   <div class="row">
-    <div class="col-lg-4 col-md-6 col-sm-6 sm-mb-30">
+  <div class="col-lg-4 col-md-6 col-sm-6 sm-mb-30">
       <div class="footer-logo">
         <img id="logo-footer" class="mb-20" src="images/logo-06.png" alt="">
+        <p class="pb-10"> Inspiramos el buen uso e implementación de tecnología que potencie nuestras capacidades</p>
+        <div class="social-icons color-hover">
+         <ul>
+          <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
+          <li class="social-dribbble"><a href="#"><i class="fa fa-dribbble"></i> </a></li>
+          <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i> </a></li>
+         </ul>
+       </div>
       </div>
-      <p class="pb-10">Noticias, opiniones y consejos sobre los medios digitales y su uso</p>
-      <div class="social-icons social-border rounded color-hover clearfix"><ul>
-        <li class="social-linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-        <li class="social-youtube"><a href="#"><i class="fa fa-youtube"></i></a></li>
-        <li class="social-facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-        <li class="social-instagram"><a href="#"><i class="fa fa-instagram"></i></a></li>
-        <li class="social-twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-        <li class="social-skype"><a href="#"><i class="fa fa-skype"></i></a></li>
-      </ul></div>
-    </div>
-    <div class="col-lg-2 col-md-3 col-sm-6 sm-mb-30">
-      <div class="footer-useful-link footer-hedding">
-        <h6 class="text-white mb-30 mt-10 text-uppercase">Información</h6>
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="about.html">Servicios</a></li>
-          <li><a href="about.html">Nosotros</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <!-- <li><a href="#">Oportunidades</a></li> -->
-        </ul>
-      </div>
-    </div>
-    <div class="col-lg-2 col-md-3 col-sm-6 sm-mb-30">
-      <div class="footer-useful-link footer-hedding">
-        <h6 class="text-white mb-30 mt-10 text-uppercase">Información</h6>
-        <ul>
-          <li><a href="index.html">Inicio</a></li>
-          <li><a href="about.html">Servicios</a></li>
-          <li><a href="about.html">Nosotros</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <!-- <li><a href="#">Oportunidades</a></li> -->
-        </ul>
-      </div>
-    </div>
-    <div class="col-lg-4 col-md-6 col-sm-6">
-      <iframe style="border-radius: 5px;" class="map_footer" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d2342.0403000705396!2d-65.2063627905762!3d-26.83561740054946!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xc3d6c418e7b06dd1!2zTGEgY29tcGHDscOtYSBkaWdpdGFs!5e0!3m2!1ses-419!2sar!4v1580314220077!5m2!1ses-419!2sar" width="400" height="200" frameborder="0" allowfullscreen=""></iframe>
-      
-    </div>
   </div>
-  <div class="footer-widget mt-20">
-    <div class="row">
-      <div class="col-lg-6 col-md-6">
-        <p class="mt-15"> &copy;Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="#"> LA COMPAÑIA DIGITAL </a> All Rights Reserved </p>
+    <div class="col-lg-4 offset-lg-1 col-md-6 col-sm-6 sm-mb-30">
+      <div class="footer-useful-link footer-hedding">
+        <h6 class="text-white mb-30 mt-10 text-uppercase">Categorías destacadas</h6>
+        <ul class="addresss-info">
+          <li><i class="fa fa-code"></i> <a href="">Desarrollo web</a></li>
+          <li><i class="fa fa-line-chart"></i> <a href="">Marketing</a></li>
+          <li><i class="fa fa-paint-brush"></i> <a href="">Diseño Gráfico</a></li>
+          <li><i class="fa fa-paint-brush"></i> <a href="">Diseño Gráfico</a></li>
+          <li><i class="fa fa-paint-brush"></i> <a href="">Diseño Gráfico</a></li>
+          <li><i class="fa fa-paint-brush"></i> <a href="">Diseño Gráfico</a></li>
+        </ul>
       </div>
-      <div class="col-lg-6 col-md-6 ">
-        <div class="footer-social mt-10">
-          <ul class="text-left text-md-right">
-             <li class="list-inline-item"><a href="#">Terms &amp; Conditions </a> &nbsp;&nbsp;&nbsp;|</li>
-             <li class="list-inline-item"><a href="#">API Use Policy </a> &nbsp;&nbsp;&nbsp;|</li>
-             <li class="list-inline-item"><a href="#">Privacy Policy </a> </li>
-          </ul>
+    </div>
+    <div class="col-lg-3  col-sm-6 xs-mb-30">
+      <h6 class="text-white mb-30 mt-10 text-uppercase">tags populares</h6>
+       <div class="footer-tags">
+         <ul>
+          <li><a href="#">Bootstrap</a></li>
+          <li><a href="#">HTML5</a></li>
+          <li><a href="#">Wordpress</a></li>
+          <li><a href="#">CSS3</a></li>
+          <li><a href="#">Creative</a></li>
+          <li><a href="#">Multipurpose</a></li>
+          <li><a href="#">Bootstrap</a></li>
+          <li><a href="#">HTML5</a></li>
+          <li><a href="#">Wordpress</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="row justify-content-center mt-3 col-12">
+    <div class="col-md-10">
+       <div class="footer-Newsletter text-center mt-30 mb-40">
+        <div id="mc_embed_signup_scroll">
+          <form action="php/mailchimp-action.php" method="POST" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate">
+           <div id="msg"> </div>
+            <div id="mc_embed_signup_scroll_2">
+              <input id="mce-EMAIL" class="form-control" type="text" placeholder="Entérate de todas las novedades de nuestro blog" name="email1" value="">
+            </div>
+            <div id="mce-responses" class="clear">
+              <div class="response" id="mce-error-response" style="display:none"></div>
+              <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                  <input type="text" name="b_b7ef45306f8b17781aa5ae58a_6b09f39a55" tabindex="-1" value="">
+              </div>
+              <div class="clear">
+                <button type="submit" name="submitbtn" id="mc-embedded-subscribe" class="button button-border mt-20 form-button"> Suscribir </button>
+              </div>
+            </form>
           </div>
+        </div>
+     </div>
+    </div>
+   </div>
+     <div class="footer-widget mt-20">
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <p class="mt-15"> &copy;Copyright <span id="copyright"> <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></span> <a href="#"> LA COMPAÑIA DIGITAL </a> All Rights Reserved </p>
       </div>
     </div>
   </div>
@@ -430,6 +458,10 @@ page-title -->
 <script src="revolution/js/extensions/revolution.extension.video.min.js"></script>
 <!-- revolution custom -->
 <script src="revolution/js/revolution-custom.js"></script>
+
+<!-- Plugin Facebook--->
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v8.0" nonce="PBUFgzrO"></script>
 
 <!-- custom -->
 <script src="js/custom.js"></script>
